# web3gateway

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  TODO.md  config.json.example  publish.sh  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  setup.sh
docs/: AI_Assistant_Thinking_Protocol.md  prompts.md
tests/: test_api.py
tests/gateway/blockchain/: test_blockchain.py
tests/gateway/etherscanv2/: test_accounts.py  test_blocks.py  test_contracts.py  test_gastracker.py  test_geth_proxy.py  test_logs.py  test_stats.py  test_tokens.py  test_transactions.py  test_usage.py
web3gateway/: __init__.py  __main__.py  config.py  exceptions.py  main.py
web3gateway/config/: settings.py
web3gateway/core/etherscanv2/: __init__.py  accounts.py  blocks.py  chainspecific.py  contracts.py  gastracker.py  logs.py  metadata.py  proxys.py  stats.py  tokens.py  transactions.py  usage.py
web3gateway/gateway_blockchain/: __init__.py
web3gateway/gateway_etherscanv2/: __init__.py  accounts.py  blocks.py  chainspecific.py  contracts.py  gastracker.py  geth_proxy.py  logs.py  metadata.py  proxies.py  stats.py  tokens.py  transaction.py  transactions.py  usage.py
web3gateway/utils/: cache.py  chains_json.py  metrics.py  rate_limiter.py
