[build-system]
requires = ["setuptools >= 64.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "web3gateway"
dynamic = ["version"]

authors = [
  {name = "daboooooo", email = "horsen666@gmail.com"},
]

description = "Web3Gateway - A Restful Web3 Gateway Service"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT License"}
classifiers = [
  "Environment :: Console",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Operating System :: MacOS",
  "Operating System :: Unix",
  "Topic :: Office/Business :: Financial :: Investment",
]

keywords = ["web3", "blockchain", "ethereum", "gateway", "restful", "api"]

dependencies = [
  # from requirements.txt
  "fastapi",
  "uvicorn",
  "web3",
  "pydantic",
  "requests",
  "redis",
  "python-multipart",
]

[project.optional-dependencies]
develop = [
  "coveralls",
  "isort",
  "mypy",
  "pre-commit",
  "pytest-asyncio",
  "pytest-cov",
  "pytest-mock",
  "pytest-random-order",
  "pytest-timeout",
  "pytest-xdist",
  "pytest",
  "ruff",
  "time-machine",
  "types-cachetools",
  "types-filelock",
  "types-python-dateutil",
  "types-requests",
  "types-tabulate",
]
dev = [
  "web3gateway[develop]",
]

[project.urls]
Homepage = "https://github.com/daboooooo/web3gateway"
Documentation = "https://github.com/daboooooo/web3gateway"
"Bug Tracker" = "https://github.com/daboooooo/web3gateway/issues"

[project.scripts]
web3gateway = "web3gateway.main:main"

[tool.setuptools]
include-package-data = true
zip-safe = false

[tool.setuptools.packages.find]
where = ["."]
include = ["web3gateway*"]
exclude = ["tests", "tests.*", "data", "data*"]
namespaces = true

[tool.setuptools.dynamic]
version = {attr = "web3gateway.__version__"}

[tool.black]
line-length = 100
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.env
    | \.venv
    | \data
    | _build
    | buck-out
    | build
    | dist
  )/
  # Exclude vendor directory
  | vendor
)
'''

[tool.isort]
line_length = 100
profile = "black"
# multi_line_output=3
lines_after_imports=2
skip_glob = ["**/.env*", "**/env/*", "**/.venv/*", "**/docs/*", "**/data/*", "**/projects/*"]
known_first_party = ["web3gateway_client"]

[tool.pytest.ini_options]
log_format = "%(asctime)s %(levelname)s %(message)s"
log_date_format = "%Y-%m-%d %H:%M:%S"

asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = "--dist loadscope"

[tool.mypy]
ignore_missing_imports = true
namespace_packages = false
warn_unused_ignores = true
exclude = [
    '^build_helpers\.py$',
    '^wb_client/build/.*$',
]
plugins = [
  "sqlalchemy.ext.mypy.plugin"
]

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

[tool.pyright]
include = ["web3gateway", "wg_client"]
exclude = [
  "**/__pycache__",
  "build_helpers/*.py",
  "wg_client/build/*",
  "build/*",
]
ignore = ["web3gateway/vendor/**"]
pythonPlatform = "All"
pythonVersion = "3.10"

typeCheckingMode = "off"
# analyzeUnannotatedFunctions = false

reportArgumentType = false  # 155
reportAssignmentType = false  # 12
reportAttributeAccessIssue = false  # 255
reportCallIssue = false  # 23
reportGeneralTypeIssues = false  # 48
reportIncompatibleMethodOverride = false  # 15
reportIncompatibleVariableOverride = false  # 5
reportIndexIssue = false  # 22
reportMissingImports = false  # 5
reportOperatorIssue = false  # 7
reportOptionalMemberAccess = false  # 35
reportOptionalOperand = false  # 7
reportPossiblyUnboundVariable = false  # 36
reportPrivateImportUsage = false  # 5
reportRedeclaration = false  # 1
reportReturnType = false  # 28
reportTypedDictNotRequiredAccess = false  # 27


[tool.ruff]
line-length = 100
extend-exclude = [".env", ".venv"]

[tool.ruff.lint]
# Exclude UP036 as it's causing the "exit if < 3.9" to fail.
extend-select = [
  "C90",    # mccabe
  "B",      # bugbear
  # "N",    # pep8-naming
  "F",      # pyflakes
  "E",      # pycodestyle
  "W",      # pycodestyle
  "UP",     # pyupgrade
  "I",      # isort
  "A",      # flake8-builtins
  "TID",    # flake8-tidy-imports
  # "EXE",  # flake8-executable
  # "C4",     # flake8-comprehensions
  "YTT",    # flake8-2020
  "S",      # flake8-bandit
  # "DTZ",  # flake8-datetimez
  # "RSE",  # flake8-raise
  # "TCH",  # flake8-type-checking
  "PTH",    # flake8-use-pathlib
  # "RUF",    # ruff
  "ASYNC",  # flake8-async
  "NPY",    # numpy
]

extend-ignore = [
  "E241",  # Multiple spaces after comma
  "E272",  # Multiple spaces before keyword
  "E221",  # Multiple spaces before operator
  "B007",  # Loop control variable not used
  "B904",  # BugBear - except raise from
  "S311",  # Standard pseudo-random generators are not suitable for cryptographic purposes
  "S603",  # `subprocess` call: check for execution of untrusted input
  "S607",  # Starting a process with a partial executable path
  "S608",  # Possible SQL injection vector through string-based query construction
  "PTH103",  # `os.makedirs()` should be replaced by `Path.mkdir(parents=True)`
  "PTH107",  # `os.remove()` should be replaced by `Path.unlink()`
  "PTH110",  # `os.path.exists()` should be replaced by `Path.exists()`
  "PTH111",  # `os.path.expanduser()` should be replaced by `Path.expanduser()`
  "PTH113",  # `os.path.isfile()` should be replaced by `Path.is_file()`
  "PTH118",  # `os.path.join()` should be replaced by `Path` with `/` operator
  "PTH123",  # `open()` should be replaced by `Path.open()`
  "PTH120",  # `os.path.dirname()` should be replaced by `Path.parent`
  "NPY002",  # Numpy legacy random generator
]

[tool.ruff.lint.mccabe]
max-complexity = 12

[tool.ruff.lint.per-file-ignores]
# "regex file matcher" = [
#   "S311"  # Standard pseudo-random generators are not suitable for cryptographic purposes
# ]
"tests/**/*.py" = [
  "S101",  # allow assert in tests
  "S104",  #  Possible binding to all interfaces
  "S311",  # Standard pseudo-random generators are not suitable for cryptographic purposes
  "S105",  # Possible hardcoded password assigned to: "secret"
  "S106",  # Possible hardcoded password assigned to argument: "token_type"
  "S110",  # `try`-`except`-`pass` detected, consider logging the exception
  ]

"wg_client/test_client/**/*.py" = [
  "S101",  # allow assert in tests
]

[tool.ruff.lint.flake8-bugbear]
# Allow default arguments like, e.g., `data: List[str] = fastapi.Query(None)`.
extend-immutable-calls = ["fastapi.Depends", "fastapi.Query"]

[tool.ruff.lint.isort]
lines-after-imports = 2
known-first-party = ["web3gateway_client"]


[tool.flake8]
# Default from https://flake8.pycqa.org/en/latest/user/options.html#cmdoption-flake8-ignore
# minus E226
ignore = ["E121","E123","E126","E24", "E203","E704","W503","W504"]
max-line-length = 100
max-complexity = 12
exclude = [
    ".git",
    "__pycache__",
    ".eggs",
    "data",
    "projects",
    ".venv",
    ".env",
]

[tool.codespell]
ignore-words-list = "coo,fo,strat,zar,selectin"
skip="*.svg,data/*.json,./projects,web3gateway/**/*.json"
