[metadata]
name = web3gateway
version = attr: web3gateway.__version__
author = Daboooooo
author_email = horsen666@gmail.com
description = Web3biew - an automated interaction tool to get web3 airdrop
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/daboooooo/web3gateway
project_urls =
    Bug Tracker = https://github.com/daboooooo/web3gateway/issues
license = MIT
classifiers =
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Operating System :: MacOS
    Operating System :: Unix
    Topic :: Office/Business :: Financial :: Investment


[options]
zip_safe = False
include_package_data = True
tests_require =
    pytest
    pytest-asyncio
    pytest-cov
    pytest-mock

packages = find:
python_requires = >=3.10

[options.entry_points]
console_scripts =
    web3gateway = web3gateway.main:main

[flake8]
# Default from https://flake8.pycqa.org/en/latest/user/options.html#cmdoption-flake8-ignore
# minus E226
ignore = E121,E123,E126,E24,E704,W503,W504
max-line-length = 100
max-complexity = 12
exclude =
    .git,
    __pycache__,
    .eggs,
    data,
    projects
